--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_opaco">#50ffffff</color>
+    <color name="dark_gray">#A9A9A9</color>
+    <color name="vermelho_claro">#ff9f90</color>
 </resources>
