implementada as plantas

--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -28,8 +28,8 @@
 
     <androidx.appcompat.widget.AppCompatButton
         style="@style/BotaoEntrarCriar"
-        android:id="@+id/botaoArvores"
-        android:text="@string/botao_arvores"
+        android:id="@+id/botaoPlantas"
+        android:text="@string/botao_plantas"
         app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
         app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
         app:layout_constraintTop_toTopOf="@id/containerComponentsTelaPrincipal"
@@ -39,7 +39,7 @@
         style="@style/BotaoEntrarCriar"
         android:id="@+id/botaoEcoEspaco"
         android:text="@string/botao_eco_espacos"
-        app:layout_constraintTop_toBottomOf="@id/botaoArvores"
+        app:layout_constraintTop_toBottomOf="@id/botaoPlantas"
         app:layout_constraintEnd_toEndOf="@id/containerComponentsTelaPrincipal"
         app:layout_constraintStart_toStartOf="@id/containerComponentsTelaPrincipal"
         />
